--- a/resume.tex
+++ b/resume.tex
@@ -59,19 +59,23 @@
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Experience}
+  \begin{rEmptyWorkSection}{Modal Labs}
+                           {New York, NY}
+                           {Software Engineer}
+                           {2023 -- Present}
+  \end{rEmptyWorkSection}
+
   \begin{rWorkSection}{Cockroach Labs}
-                           {Toronto, ON}
-                           {Senior Software Engineer (Transactional KV)}
-                           {2019 -- Present}
+                      {Toronto, ON}
+                      {Senior Software Engineer (Transactional KV)}
+                      {2019 -- 2023}
   {
-    \item Leading \href{https://www.cockroachlabs.com/blog/admission-control-in-cockroachdb/}{\myuline{admission control}}: overload protection, work prioritization, and inter-tenant fairness
+    \item Led \href{https://www.cockroachlabs.com/blog/admission-control-in-cockroachdb/}{\myuline{admission control}}: CRDB's overload protection, work prioritization, and fairness mechanism
     \item Built \href{https://www.cockroachlabs.com/blog/rubbing-control-theory/}{\myuline{elastic CPU limiter}} using patched Go, protecting latencies from in-process background work
     \item Improved \href{https://github.com/cockroachdb/cockroach/blob/4cc60c590a6333afcd0f4cd031f1ae5fb625e2eb/docs/RFCS/20210610_tenant_zone_configs.md}{\myuline{schema count scalability}} from $O$(10k) to $O$(1M), re-architecting for multi-tenancy 
-    \item Worked on \href{https://github.com/cockroachdb/cockroach/issues/95563}{\myuline{flow control}} for quorum writes, 
+    \item Worked on \href{https://github.com/irfansharif/cockroach/blob/230918.kvflowcontrol-tech-note/docs/tech-notes/replication_admission_control.md}{\myuline{flow control}} for quorum writes, 
       \href{https://github.com/cockroachdb/cockroach/blob/3a6596e/docs/RFCS/20200513_long_running_migrations.md}{\myuline{upgrades}} infrastructure, 
       \href{https://github.com/cockroachdb/cockroach/pull/55687}{\myuline{bazel-ifying}} monorepo, tracing
-
-    % \item blog posts, interviews, RFCs, CPU attribution, reading group, mentorship (interns, juniors), on call
   }
   \end{rWorkSection}
 
@@ -140,14 +144,10 @@
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Research}
-  \begin{rResearchSection}{Waterloo Artificial Intelligence Institute}
-                     {(SAT/SMT solvers)}
+  \begin{rEmptyResearchSection}{Waterloo AI Institute}
+                     {-- Studied SAT/SMT solvers, with \href{https://uwaterloo.ca/electrical-computer-engineering/profile/vganesh}{\myuline{Prof. Vijay Ganesh}}}
                      {2016}
-   \item Studied search space pruning, clustering and
-     parallelization techniques under
-     \href{https://uwaterloo.ca/electrical-computer-engineering/profile/vganesh}{\myuline{Prof.
-     Vijay Ganesh}}
-  \end{rResearchSection}
+  \end{rEmptyResearchSection}
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
